enmasse_console_kube/yamls/console.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console
  namespace: enmasse-infra
  labels:
    app: enmasse
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: 192.168.39.214.xip.io
    http:
      paths:
      - backend:
          serviceName: console
          servicePort: https
        path: /
  tls:
  - hosts:
      - 192.168.39.214.xip.io
